--- a/history.html
+++ b/history.html
@@ -5,13 +5,14 @@
 <title>Drive History</title>
 
 <style>
-/* (STYLES UNCHANGED — EXACTLY SAME AS YOUR FILE) */
 body {
   font-family: Arial, sans-serif;
   padding: 0;
   margin: 0;
   background: #f2f6ff;
 }
+
+/* ===== STICKY HEADER ===== */
 .header-bar {
   position: sticky;
   top: 0;
@@ -23,6 +24,7 @@ body {
   gap: 10px;
   padding: 12px;
 }
+
 .header-bar button {
   background: white;
   color: #003f88;
@@ -32,26 +34,34 @@ body {
   font-size: 16px;
   cursor: pointer;
 }
+.header-bar button:hover { opacity: 0.9; }
+
 .header-title {
   flex: 1;
   text-align: center;
   font-size: 20px;
   font-weight: 700;
 }
+
 .header-credit {
   font-size: 16px;
   font-weight: 500;
   opacity: 0.9;
   white-space: nowrap;
 }
+
+/* ===== PAGE ===== */
 .page { padding: 20px; }
+
 h2, h3 {
   color: #003f88;
   text-align: center;
   font-weight: 700;
 }
+
 h2 { font-size: 34px; margin-bottom: 10px; }
 h3 { font-size: 22px; margin-bottom: 10px; }
+
 .card {
   background: white;
   padding: 20px;
@@ -59,12 +69,39 @@ h3 { font-size: 22px; margin-bottom: 10px; }
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   margin-bottom: 20px;
 }
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 16px;
 }
-.label { font-weight: bold; color: #003f88; }
+
+.label {
+  font-weight: bold;
+  color: #003f88;
+}
+
+/* CONTROLS */
+.controls {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+  flex-wrap: wrap;
+}
+.controls input {
+  padding: 6px;
+  width: 220px;
+}
+.controls button {
+  padding: 6px 12px;
+  background: #003f88;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* TABLE */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -78,11 +115,25 @@ th {
   background: #003f88;
   color: white;
 }
+#historyTable th:nth-child(3),
+#historyTable td:nth-child(3) {
+  width: 110px;
+  white-space: nowrap;
+  text-align: center;
+}
 .year-row td {
   background: #e8f0ff;
   color: #003f88;
   font-weight: 700;
   text-align: center;
+  padding: 8px;
+  font-size: 15px;
+}
+
+/* MOBILE */
+@media (max-width: 600px) {
+  .grid { grid-template-columns: 1fr; }
+  .header-credit { display: none; }
 }
 </style>
 </head>
@@ -93,36 +144,52 @@ th {
   <button onclick="goHome()">🏠 Home</button>
   <button onclick="goBack()">⬅ Back</button>
   <button onclick="goDriveInfo()">ℹ️ Drive Info</button>
+
   <div class="header-title">Drive History</div>
-  <div class="header-credit">Designed and Maintained by Rakesh Chandra Sethy</div>
+
+  <div class="header-credit">
+    Designed and Maintained by Rakesh Chandra Sethy
+  </div>
 </div>
 
 <div class="page">
+
 <h2>Drive Information</h2>
-<div id="driveInfo" class="card">Loading drive information…</div>
+
+<div id="driveInfo" class="card">
+  Loading drive information…
+</div>
 
 <h2>History</h2>
+
 <div class="card">
-<table id="historyTable">
-<thead>
-<tr>
-<th>TR NO</th>
-<th>MONTH</th>
-<th>DATE</th>
-<th>DETAILS OF JOB</th>
-<th>JOB TYPE</th>
-<th>JOB CATEGORY</th>
-<th>CARRIED OUT BY</th>
-<th>LINK</th>
-</tr>
-</thead>
-<tbody></tbody>
-</table>
+  <div class="controls">
+    <input id="search" placeholder="Search…">
+    <button onclick="exportExcel()">Export Excel</button>
+    <button onclick="window.print()">Export PDF</button>
+  </div>
+
+  <table id="historyTable">
+    <thead>
+      <tr>
+        <th>TR NO</th>
+        <th>MONTH</th>
+        <th>DATE</th>
+        <th>DETAILS OF JOB</th>
+        <th>JOB TYPE</th>
+        <th>JOB CATEGORY</th>
+        <th>CARRIED OUT BY</th>
+        <th>LINK</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
+
 </div>
 
 <script>
-/* ========= NORMALIZE (🔥 ONLY ADDITION) ========= */
+/* ===== NORMALIZE (ONLY ADDITION) ===== */
 function normalize(v){
   return String(v || "")
     .replace(/[–—?]/g, "-")
@@ -130,6 +197,7 @@ function normalize(v){
     .trim();
 }
 
+/* ===== ID ===== */
 const rawId = new URLSearchParams(location.search).get("id");
 const id = normalize(rawId);
 
@@ -143,12 +211,13 @@ function goDriveInfo(){
     encodeURIComponent(id);
 }
 
-/* ===== DRIVE INFO ===== */
+/* ===== DRIVE INFO (UNCHANGED) ===== */
 async function loadDriveInfo(){
   if(!id) return;
 
   const url="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
-  const j=await (await fetch(url)).json();
+  const r=await fetch(url);
+  const j=await r.json();
 
   let c=null;
   j.rows.forEach(r=>{
@@ -160,7 +229,91 @@ async function loadDriveInfo(){
     return;
   }
 
-  driveInfo.innerHTML=`<h3>${c[1]} – ${c[2]}</h3>`;
+  const type=normalize(c[1]);
+
+  if(type==="TRANSFORMER"){
+    driveInfo.innerHTML=`
+      <h3>Transformer No: ${c[2]}</h3>
+      <div class="grid">
+        <p><span class="label">TR Sl No:</span> ${c[3]}</p>
+        <p><span class="label">Make:</span> ${c[4]}</p>
+        <p><span class="label">Rating:</span> ${c[5]} KVA</p>
+        <p><span class="label">From S/S:</span> ${c[6]}</p>
+        <p><span class="label">Unit S/S:</span> ${c[7]}</p>
+        <p><span class="label">% Impedance:</span> ${c[8]}</p>
+        <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+        <p><span class="label">Panel Rating:</span> ${c[10]}</p>
+      </div>`;
+    return;
+  }
+
+  if(type==="BREAKER"){
+    driveInfo.innerHTML=`
+      <h3>Breaker – ${c[2]}</h3>
+      <div class="grid">
+        <p><span class="label">Compartment No:</span> ${c[3]}</p>
+        <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
+        <p><span class="label">Make:</span> ${c[5]}</p>
+        <p><span class="label">Rating:</span> ${c[6]} A</p>
+        <p><span class="label">Type:</span> ${c[7]}</p>
+        <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+        <p><span class="label">Panel Rating:</span> ${c[10]}</p>
+      </div>`;
+    return;
+  }
+
+  driveInfo.innerHTML=`
+    <h3>${c[1]} – ${c[2]}</h3>
+    <p><span class="label">Pump Type:</span> ${c[4]}</p>
+    <div class="grid">
+      <p><span class="label">Rating:</span> ${c[5]} KW</p>
+      <p><span class="label">FLC:</span> ${c[10]} A</p>
+      <p><span class="label">SFU:</span> ${c[14]}</p>
+      <p><span class="label">Fuse:</span> ${c[15]}</p>
+      <p><span class="label">Contactor:</span> ${c[16]}</p>
+      <p><span class="label">Relay:</span> ${c[17]}</p>
+      <p><span class="label">CT (M):</span> ${c[18]}</p>
+      <p><span class="label">CT (P):</span> ${c[19]}</p>
+      <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
+    </div>`;
+}
+
+/* ===== DATE NORMALIZER (UNCHANGED) ===== */
+function normalizeDateKey(v){
+  if(!v) return "";
+  if(/^\d{2}\/\d{2}\/\d{4}$/.test(v)) return v;
+  if(typeof v==="string" && v.startsWith("Date(")){
+    const p=v.match(/\d+/g);
+    const d=new Date(p[0],p[1],p[2]);
+    return `${String(d.getDate()).padStart(2,"0")}/${String(d.getMonth()+1).padStart(2,"0")}/${d.getFullYear()}`;
+  }
+  const d=new Date(v);
+  if(!isNaN(d)){
+    return `${String(d.getDate()).padStart(2,"0")}/${String(d.getMonth()+1).padStart(2,"0")}/${d.getFullYear()}`;
+  }
+  return "";
+}
+
+function formatDate(v){
+  const key=normalizeDateKey(v);
+  if(!key) return "";
+  const[d,m,y]=key.split("/");
+  return `${d}-${m}-${y}`;
+}
+
+/* ===== JOB BOOK ===== */
+const JOBBOOK_JSON =
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/jobbook.json";
+
+let jobBookMap = {};
+
+async function loadJobBook(){
+  const r = await fetch(JOBBOOK_JSON);
+  const j = await r.json();
+  j.rows.forEach(r=>{
+    const key = normalizeDateKey(r[0]);
+    if(key && r[1]) jobBookMap[key] = r[1];
+  });
 }
 
 /* ===== HISTORY ===== */
@@ -172,7 +325,9 @@ async function loadHistory(){
 
   for(const y of HISTORY_YEARS){
     try{
-      const j=await (await fetch(HISTORY_BASE+y+".json")).json();
+      const r=await fetch(HISTORY_BASE+y+".json");
+      if(!r.ok) continue;
+      const j=await r.json();
       j.rows.forEach(row=>{
         if(normalize(`${row[2]}-${row[3]}`) === id){
           all.push(row);
@@ -181,36 +336,73 @@ async function loadHistory(){
     }catch(e){}
   }
 
+  all.sort((a,b)=>new Date(b[4])-new Date(a[4]));
   renderHistory(all);
 }
 
 function renderHistory(rows){
   const tbody=document.querySelector("#historyTable tbody");
   tbody.innerHTML="";
+  let currentYear="";
 
   rows.forEach(r=>{
+    const key=normalizeDateKey(r[4]);
+    const y=key.slice(-4);
+
+    if(y!==currentYear){
+      currentYear=y;
+      const yr=document.createElement("tr");
+      yr.className="year-row";
+      yr.innerHTML=`<td colspan="8">YEAR ${y}</td>`;
+      tbody.appendChild(yr);
+    }
+
+    const link = jobBookMap[key] || r[10];
+
     const tr=document.createElement("tr");
     tr.innerHTML=`
       <td>${r[0]||""}</td>
       <td>${r[1]||""}</td>
-      <td>${r[4]||""}</td>
+      <td>${formatDate(r[4])}</td>
       <td>${r[5]||""}</td>
       <td>${r[6]||""}</td>
       <td>${r[7]||""}</td>
       <td>${r[9]||""}</td>
-      <td>${r[10]?`<a href="${r[10]}" target="_blank">Open</a>`:""}</td>`;
+      <td>${link?`<a href="${link}" target="_blank">Open</a>`:""}</td>`;
     tbody.appendChild(tr);
   });
 
   if(!rows.length){
-    tbody.innerHTML =
-      `<tr><td colspan="8" style="text-align:center;">No history found</td></tr>`;
+    tbody.innerHTML=`<tr><td colspan="8" style="text-align:center;">No history found</td></tr>`;
   }
 }
 
+/* ===== SEARCH ===== */
+document.getElementById("search").addEventListener("input",function(){
+  const v=this.value.toLowerCase();
+  document.querySelectorAll("#historyTable tbody tr").forEach(tr=>{
+    tr.style.display=tr.innerText.toLowerCase().includes(v)?"":"none";
+  });
+});
+
+/* ===== EXPORT ===== */
+function exportExcel(){
+  let csv=[];
+  document.querySelectorAll("#historyTable tr").forEach(r=>{
+    csv.push([...r.children].map(c=>`"${c.innerText}"`).join(","));
+  });
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(new Blob([csv.join("\n")]));
+  a.download="drive-history.csv";
+  a.click();
+}
+
 /* ===== INIT ===== */
-loadDriveInfo();
-loadHistory();
+(async function(){
+  await loadJobBook();
+  loadDriveInfo();
+  loadHistory();
+})();
 </script>
 
 </body>
