--- a/summeryjobwise1.html
+++ b/summeryjobwise1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -89,6 +88,14 @@ tbody tr:hover {
   cursor: pointer;
 }
 
+/* ===== DATE COLUMN ===== */
+#resultTable th:nth-child(4),
+#resultTable td:nth-child(4) {
+  width: 120px;
+  white-space: nowrap;
+  text-align: center;
+}
+
 /* ===== NO RESULT ===== */
 .no-result {
   text-align: center;
@@ -101,15 +108,6 @@ tbody tr:hover {
 @media print {
   .header-bar, .controls { display: none; }
 }
-  /* ===== FIX DATE COLUMN WIDTH ===== */
-#resultTable th:nth-child(4),
-#resultTable td:nth-child(4) {
-  width: 120px;
-  min-width: 120px;
-  white-space: nowrap;
-  text-align: center;
-}
-
 </style>
 </head>
 
@@ -131,6 +129,10 @@ tbody tr:hover {
 
   <select id="year">
     <option value="">Select Year</option>
+  </select>
+
+  <select id="month">
+    <option value="all">All Months</option>
   </select>
 
   <button onclick="loadData()">Search</button>
@@ -173,14 +175,14 @@ function goHome() {
   location.href = "https://08electricaldata.github.io/";
 }
 
-/* ===== LOAD JOB TYPES (JSON COLUMN C) ===== */
+/* ===== LOAD JOB TYPES (JSON COLUMN B) ===== */
 async function loadJobTypes() {
   const r = await fetch(JSON_URL);
   const d = await r.json();
 
   const set = new Set();
   d.rows.forEach(r => {
-    if (r[1]) set.add(r[1]);
+    if (r[1]) set.add(r[1]); // 🔥 COLUMN B
   });
 
   const sel = document.getElementById("jobType");
@@ -201,6 +203,25 @@ function loadYears() {
     o.textContent = i;
     y.appendChild(o);
   }
+}
+
+/* ===== LOAD MONTHS (DEFAULT = CURRENT MONTH) ===== */
+function loadMonths() {
+  const months = [
+    "January","February","March","April","May","June",
+    "July","August","September","October","November","December"
+  ];
+
+  const m = document.getElementById("month");
+  const currentMonth = new Date().getMonth(); // 0–11
+
+  months.forEach((name, idx) => {
+    const o = document.createElement("option");
+    o.value = idx;
+    o.textContent = name;
+    if (idx === currentMonth) o.selected = true; // ✅ default
+    m.appendChild(o);
+  });
 }
 
 /* ===== DATE UTIL ===== */
@@ -225,6 +246,7 @@ function formatDate(d) {
 async function loadData() {
   const job = document.getElementById("jobType").value;
   const year = document.getElementById("year").value;
+  const month = document.getElementById("month").value;
 
   if (!job || !year) {
     alert("Select Job Type and Year");
@@ -244,33 +266,25 @@ async function loadData() {
 
   json.table.rows.forEach(r => {
     const c = r.c || [];
+    const jobType = c[6]?.v;          // 🔥 COLUMN G
+    const d = parseDate(c[4]?.v);     // 🔥 COLUMN E
 
-    const jobType = c[6]?.v;   // 🔥 // COLUMN G
-    const dateObj = parseDate(c[4]?.v); // 🔥 COLUMN E
-
-    if (!dateObj) return;
+    if (!d) return;
     if (jobType !== job) return;
-    if (dateObj.getFullYear() != year) return;
+    if (d.getFullYear() != year) return;
+    if (month !== "all" && d.getMonth() != month) return;
 
     found = true;
 
     const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td>${c[0]?.v || ""}</td>   <!-- 🔥 COLUMN A -->
+      <td>${c[0]?.v || ""}</td>
       <td>${c[2]?.v || ""}</td>
       <td>${c[3]?.v || ""}</td>
-      <td>${formatDate(dateObj)}</td>
+      <td>${formatDate(d)}</td>
       <td>${jobType}</td>
       <td>${c[5]?.v || ""}</td>
     `;
-
-    tr.onclick = () => {
-      const id = `${c[2]?.v}-${c[3]?.v}`;
-      location.href =
-        "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
-        encodeURIComponent(id);
-    };
-
     tbody.appendChild(tr);
   });
 
@@ -292,6 +306,7 @@ function exportCSV() {
 /* INIT */
 loadJobTypes();
 loadYears();
+loadMonths();
 </script>
 
 </body>
