--- a/trafopm.html
+++ b/trafopm.html
@@ -5,165 +5,70 @@
 <title>Transformer Maintenance Status</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Chart.js -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  background: #f2f6ff;
-}
+body { font-family: Arial, sans-serif; margin:0; background:#f2f6ff; }
 
-/* ===== HEADER ===== */
+/* HEADER */
 .header {
-  background: #003f88;
-  color: white;
-  padding: 14px 16px;
+  background:#003f88; color:#fff; padding:14px 16px;
 }
 .header-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display:flex; align-items:center; justify-content:space-between;
 }
 .header-btn {
-  background: white;
-  color: #003f88;
-  border: none;
-  border-radius: 6px;
-  padding: 6px 10px;
-  font-size: 18px;
-  cursor: pointer;
+  background:#fff; color:#003f88; border:none;
+  padding:6px 10px; border-radius:6px;
+  font-size:16px; cursor:pointer;
 }
-.header-btn:hover { opacity: 0.85; }
-.header-center {
-  text-align: center;
-  flex: 1;
-}
-.header-center h1 {
-  margin: 0;
-  font-size: 28px;
-}
-.header-center p {
-  margin: 4px 0 0;
-  font-size: 15px;
-}
+.header-center { text-align:center; flex:1; }
+.header-center h1 { margin:0; font-size:30px; }
+.header-center p { margin:4px 0 0; font-size:15px; }
 
-/* ===== CONTAINER ===== */
-.container { padding: 20px; }
-
-/* ===== SUMMARY ===== */
+/* SUMMARY */
 .summary {
-  display: flex;
-  gap: 16px;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
+  display:flex; gap:16px; padding:15px; flex-wrap:wrap;
 }
 .summary .card {
-  flex: 1;
-  min-width: 220px;
-  background: white;
-  border-radius: 10px;
-  padding: 15px;
-  text-align: center;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  background:#fff; border-radius:10px;
+  padding:15px; min-width:200px;
+  text-align:center; box-shadow:0 2px 6px rgba(0,0,0,.15);
 }
-.summary h3 { margin: 0; color: #003f88; }
-.summary p {
-  font-size: 26px;
-  font-weight: bold;
-  margin: 6px 0 0;
-}
-.overdue { color: red; }
-.due-soon { color: orange; }
+.summary h3 { margin:0; color:#003f88; }
+.summary p { font-size:26px; font-weight:bold; margin:6px 0 0; }
 
-/* ===== CHART ===== */
-.chart-card {
-  background: white;
-  border-radius: 10px;
-  padding: 15px;
-  margin-bottom: 20px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-}
-
-/* ===== CONTROLS ===== */
+/* CONTROLS */
 .controls {
-  display: flex;
-  gap: 10px;
-  flex-wrap: wrap;
-  margin-bottom: 12px;
+  display:flex; gap:10px; padding:0 15px 10px; flex-wrap:wrap;
 }
-.controls input {
-  padding: 8px;
-  width: 260px;
+.controls input, .controls select {
+  padding:8px; font-size:14px;
 }
 .controls button {
-  padding: 8px 14px;
-  background: #003f88;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  padding:8px 14px; background:#003f88;
+  color:#fff; border:none; border-radius:4px; cursor:pointer;
 }
 
-/* ===== TABLE ===== */
+/* TABLE */
 table {
-  width: 100%;
-  border-collapse: collapse;
-  background: white;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  width:100%; border-collapse:collapse;
+  background:#fff; box-shadow:0 2px 6px rgba(0,0,0,.15);
 }
-th, td {
-  border: 1px solid #ccc;
-  padding: 8px;
-  text-align: center;
-}
-th {
-  background: #003f88;
-  color: white;
-  position: sticky;
-  top: 0;
-}
+th,td { border:1px solid #ccc; padding:8px; text-align:center; }
+th { background:#003f88; color:#fff; position:sticky; top:0; }
 
-/* ===== MAINTENANCE COLUMNS ===== */
-#trTable th:nth-child(7),
-#trTable td:nth-child(7) {
-  width: 140px;
-  background: #fff4cc;
-}
-#trTable th:nth-child(8),
-#trTable td:nth-child(8) {
-  width: 140px;
-  background: #e8f4ff;
-}
-#trTable th:nth-child(9),
-#trTable td:nth-child(9) {
-  width: 140px;
-  background: #e9ffe8;
-}
+/* COLUMN COLORS */
+td.col-oil { background:#fff4cc; }
+td.col-oh  { background:#e8f4ff; }
+td.col-pm  { background:#e9ffe8; }
 
-/* ===== STATUS ===== */
-.ok {
-  background: #c8f7c5;
-  font-weight: bold;
-}
-.overdue-cell {
-  background: red;
-  color: yellow;
-  font-weight: bold;
-}
-.due-soon-cell {
-  background: orange;
-  color: black;
-  font-weight: bold;
-}
+.ok { background:#b6f2b6; font-weight:bold; }
+.warn { background:orange; color:#000; font-weight:bold; }
+.overdue { background:red; color:yellow; font-weight:bold; }
 
-/* ===== UX ===== */
-tbody tr { cursor: pointer; }
-tbody tr:hover { background: #eef5ff; }
+tbody tr:hover { background:#eef5ff; cursor:pointer; }
 
 @media print {
-  .controls, .header-bar, .chart-card { display: none; }
+  .controls,.header-bar{display:none;}
 }
 </style>
 </head>
@@ -172,10 +77,8 @@ tbody tr:hover { background: #eef5ff; }
 
 <div class="header">
   <div class="header-bar">
-    <div>
-      <button class="header-btn" onclick="goHome()">🏠 Home</button>
-      <button class="header-btn" onclick="history.back()">⬅ Back</button>
-    </div>
+    <button class="header-btn" onclick="goHome()">🏠 Home</button>
+    <button class="header-btn" onclick="history.back()">⬅ Back</button>
     <div class="header-center">
       <h1>Transformer Maintenance Status</h1>
       <p>Designed & maintained by Rakesh Chandra Sethy</p>
@@ -184,173 +87,144 @@ tbody tr:hover { background: #eef5ff; }
   </div>
 </div>
 
-<div class="container">
-
-<!-- SUMMARY -->
 <div class="summary">
-  <div class="card">
-    <h3>Total Transformers</h3>
-    <p id="totalTrf">0</p>
-  </div>
-  <div class="card">
-    <h3>Overdue 🔴</h3>
-    <p id="overdueTrf" class="overdue">0</p>
-  </div>
-  <div class="card">
-    <h3>Due in 30 Days 🟠</h3>
-    <p id="dueSoonTrf" class="due-soon">0</p>
-  </div>
-</div>
-
-<!-- CHART -->
-<div class="chart-card">
-  <h3 style="color:#003f88;text-align:center;margin-top:0">
-    Monthly PM Compliance
-  </h3>
-  <canvas id="pmChart" height="120"></canvas>
+  <div class="card"><h3>Total Transformers</h3><p id="tot">0</p></div>
+  <div class="card"><h3>Overdue 🔴</h3><p id="over">0</p></div>
+  <div class="card"><h3>Due in 30 Days 🟠</h3><p id="soon">0</p></div>
 </div>
 
 <div class="controls">
-  <input id="search" placeholder="Search S/S / TRF No / Make">
+  <input id="search" placeholder="Search S/S / TRF / Make">
+  <select id="yearFilter"></select>
+  <button onclick="sendWhatsApp()">🔔 WhatsApp Alert</button>
   <button onclick="exportExcel()">📥 Export Excel</button>
   <button onclick="window.print()">🖨 Print</button>
 </div>
 
-<table id="trTable">
+<table id="tbl">
 <thead>
 <tr>
-  <th>S/S</th>
-  <th>TYPE</th>
-  <th>TRF NO</th>
-  <th>TRF SL NO</th>
-  <th>MAKE</th>
-  <th>RATING</th>
-  <th>OIL LEAKAGE</th>
-  <th>O/H DATE</th>
-  <th>PM DATE</th>
-  <th>O/H FREQ</th>
-  <th>LAST DATE</th>
-  <th>NEXT DUE</th>
+<th>S/S</th><th>TYPE</th><th>TRF NO</th><th>TRF SL NO</th>
+<th>MAKE</th><th>RATING</th>
+<th>OIL LEAKAGE</th><th>O/H DATE</th><th>PM DATE</th>
+<th>O/H FREQ</th><th>LAST DATE</th><th>NEXT DUE</th>
 </tr>
 </thead>
 <tbody></tbody>
 </table>
 
-</div>
-
 <script>
 const JSON_URL =
 "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/master/transformer_pm.json";
 
-function goHome(){
-  location.href="https://08electricaldata.github.io/";
-}
+function goHome(){ location.href="https://08electricaldata.github.io/"; }
 
+/* DATE HELPERS */
 function parseDate(v){
   if(!v) return null;
   if(typeof v==="string" && v.startsWith("Date")){
-    const p=v.match(/\d+/g);
-    return new Date(p[0],p[1],p[2]);
+    const p=v.match(/\d+/g); return new Date(p[0],p[1],p[2]);
+  }
+  if(typeof v==="string" && v.includes("T")){
+    const d=new Date(v); return isNaN(d)?null:d;
   }
   if(/^\d{2}-\d{2}-\d{4}$/.test(v)){
-    const [d,m,y]=v.split("-");
-    return new Date(y,m-1,d);
+    const [d,m,y]=v.split("-"); return new Date(y,m-1,d);
   }
   return null;
 }
 function fmt(d){
-  return d?`${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`:"";
+  if(!d||isNaN(d)) return "";
+  return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
-async function loadData(){
-  const res=await fetch(JSON_URL);
-  const data=await res.json();
-
-  const tbody=document.querySelector("#trTable tbody");
-  tbody.innerHTML="";
-
+/* LOAD */
+async function load(){
+  const r=await fetch(JSON_URL);
+  const j=await r.json();
+  const tbody=document.querySelector("#tbl tbody");
   const today=new Date(); today.setHours(0,0,0,0);
 
-  let total=0, overdue=0, dueSoon=0;
-  const monthCount=Array(12).fill(0);
+  let tot=0, over=0, soon=0;
+  const years=new Set();
 
-  data.rows.forEach(r=>{
-    if(!r[2]) return;
-    total++;
+  j.rows.forEach(r=>{
+    const pm=parseDate(r[8]);
+    if(pm) years.add(pm.getFullYear());
+  });
 
-    const nextDue=parseDate(r[11]);
-    let cls="ok";
+  const yf=document.getElementById("yearFilter");
+  yf.innerHTML='<option value="">All Years</option>';
+  [...years].sort().forEach(y=>{
+    yf.innerHTML+=`<option value="${y}">${y}</option>`;
+  });
 
-    if(!nextDue || nextDue<today){
-      cls="overdue-cell"; overdue++;
-    } else {
-      const diff=(nextDue-today)/(1000*60*60*24);
-      if(diff<=30){ cls="due-soon-cell"; dueSoon++; }
-    }
+  function render(){
+    tbody.innerHTML=""; tot=over=soon=0;
+    const ysel=yf.value;
+    const q=search.value.toLowerCase();
 
-    if(nextDue) monthCount[nextDue.getMonth()]++;
+    j.rows.forEach(r=>{
+      const pm=parseDate(r[8]);
+      if(ysel && (!pm || pm.getFullYear()!=ysel)) return;
 
-    const tr=document.createElement("tr");
-    tr.onclick=()=>{
-      location.href=
-        "https://08electricaldata.github.io/drive-viewer/history.html?id="
-        +encodeURIComponent("TRANSFORMER-"+String(r[2]).trim());
-    };
+      const rowText=(r.join(" ")||"").toLowerCase();
+      if(q && !rowText.includes(q)) return;
 
-    tr.innerHTML=`
-      <td>${r[0]||""}</td>
-      <td>${r[1]||""}</td>
-      <td>${r[2]||""}</td>
-      <td>${r[3]||""}</td>
-      <td>${r[4]||""}</td>
-      <td>${r[5]||""}</td>
-      <td>${r[6]||""}</td>
-      <td>${fmt(parseDate(r[7]))}</td>
-      <td>${fmt(parseDate(r[8]))}</td>
-      <td>${r[9]||""}</td>
+      tot++;
+      const next=parseDate(r[11]);
+      let cls="ok";
+      if(next){
+        const diff=(next-today)/86400000;
+        if(diff<0){ cls="overdue"; over++; }
+        else if(diff<=30){ cls="warn"; soon++; }
+      }
+
+      const tr=document.createElement("tr");
+      tr.onclick=()=> {
+        location.href=
+          "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
+          encodeURIComponent("TRANSFORMER-"+String(r[2]).trim());
+      };
+
+      tr.innerHTML=`
+      <td>${r[0]}</td><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td>
+      <td>${r[4]}</td><td>${r[5]}</td>
+      <td class="col-oil">${fmt(parseDate(r[6]))}</td>
+      <td class="col-oh">${fmt(parseDate(r[7]))}</td>
+      <td class="col-pm">${fmt(pm)}</td>
+      <td>${r[9]}</td>
       <td>${fmt(parseDate(r[10]))}</td>
-      <td class="${cls}">${fmt(nextDue)}</td>
-    `;
-    tbody.appendChild(tr);
-  });
-
-  totalTrf.innerText=total;
-  overdueTrf.innerText=overdue;
-  dueSoonTrf.innerText=dueSoon;
-
-  drawChart(monthCount);
-
-  search.onkeyup=function(){
-    const q=this.value.toLowerCase();
-    document.querySelectorAll("#trTable tbody tr").forEach(tr=>{
-      tr.style.display=
-        tr.innerText.toLowerCase().includes(q)?"":"none";
+      <td class="${cls}">${fmt(next)}</td>`;
+      tbody.appendChild(tr);
     });
-  };
+
+    totElem.innerText=tot;
+    overElem.innerText=over;
+    soonElem.innerText=soon;
+  }
+
+  search.onkeyup=render;
+  yf.onchange=render;
+  render();
 }
 
-function drawChart(data){
-  new Chart(document.getElementById("pmChart"),{
-    type:"bar",
-    data:{
-      labels:["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],
-      datasets:[{
-        label:"PM Count",
-        data:data,
-        backgroundColor:"#003f88"
-      }]
-    },
-    options:{
-      responsive:true,
-      plugins:{ legend:{ display:false } }
-    }
+/* WHATSAPP */
+function sendWhatsApp(){
+  let msg="🔔 Transformer PM Overdue List:%0A";
+  document.querySelectorAll("td.overdue").forEach(td=>{
+    const tr=td.parentElement;
+    msg+=`TRF ${tr.children[2].innerText} → ${td.innerText}%0A`;
   });
+  if(msg.endsWith(":%0A")){ alert("No overdue transformers"); return; }
+  window.open("https://wa.me/?text="+msg,"_blank");
 }
 
+/* EXPORT */
 function exportExcel(){
   let csv=[];
-  document.querySelectorAll("#trTable tr").forEach(r=>{
-    csv.push([...r.children].map(td=>`"${td.innerText.replace(/"/g,'""')}"`).join(","));
+  document.querySelectorAll("table tr").forEach(r=>{
+    csv.push([...r.children].map(td=>`"${td.innerText}"`).join(","));
   });
   const a=document.createElement("a");
   a.href=URL.createObjectURL(new Blob([csv.join("\n")]));
@@ -358,7 +232,11 @@ function exportExcel(){
   a.click();
 }
 
-loadData();
+const totElem=document.getElementById("tot");
+const overElem=document.getElementById("over");
+const soonElem=document.getElementById("soon");
+
+load();
 </script>
 
 </body>
